--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
   </head>
   <body style="background-color: #212121; color: #fff">
     <nav>
-      <a href="/" aria-current="page">Home</a>
+      <a href="/projects" aria-current="page">Home</a>
       
     </nav>
     <main>
@@ -18,6 +18,9 @@
       <div class="projects">
         <a class="project-link" style="" href="./colorchanger/index.html"
           >Project 1 - color Changer 🔥</a
+        >
+        <a class="project-link" style="" href="./BMI/index.html"
+          >Project 2 - BMI Calculator ☕️</a
         >
         
       </div>
