--- a/projects/index.html
+++ b/projects/index.html
@@ -22,6 +22,9 @@
         <a class="project-link" style="" href="./BMI/index.html"
           >Project 2 - BMI Calculator ☕️</a
         >
+        <a class="project-link" style="" href="./BMI/index.html"
+          >Project 2 - BMI Calculator ☕️</a
+        >
         
       </div>
     </main>
