--- a/projects/index.html
+++ b/projects/index.html
@@ -22,8 +22,8 @@
         <a class="project-link" style="" href="./BMI/index.html"
           >Project 2 - BMI Calculator ☕️</a
         >
-        <a class="project-link" style="" href="./BMI/index.html"
-          >Project 2 - BMI Calculator ☕️</a
+        <a class="project-link" style="" href="./clock/index.html"
+          >Project 3 - Digital clock 😎</a
         >
         
       </div>
