--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,9 @@
         <a class="project-link" style="" href="./clock/index.html"
           >Project 3 - Digital clock 😎</a
         >
+        <a class="project-link" style="" href="./guessthenumber/index.html"
+          >Project 4 - Guess the number 🤨</a
+        >
         
       </div>
     </main>
