--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,12 @@
         <a class="project-link" style="" href="./guessthenumber/index.html"
           >Project 4 - Guess the number 🤨</a
         >
+        <a class="project-link" style="" href="./keyboard/index.html"
+          >Project 5- keybboard</a
+        >
+        <a class="project-link" style="" href="./colors/index.html"
+          >Project 6- colors</a
+        >
         
       </div>
     </main>
